@@ -38,5 +38,6 @@ for file in files:
 	env.Execute(SymLink('lib/libsolkerncompat/include/' + file, 'lib/libsolcompat/include/' + file))
 
 env.Execute(SymLink('lib/libsolkerncompat/include/sys/atomic.h', 'lib/libsolcompat/include/atomic.h'))
+env.Execute(SymLink('lib/libsolkerncompat/include/sys/file_aux.h', 'lib/libsolcompat/include/sys/file.h'))
 env.Execute(SymLink('lib/libsolkerncompat/include/sys/param_aux.h', 'lib/libsolcompat/include/sys/param.h'))
 env.Execute(SymLink('lib/libsolkerncompat/include/sys/time_aux.h', 'lib/libsolcompat/include/sys/time.h'))
